Made the homePage responsive/ added text to each functionality/ added new links(cards)

--- a/html/error404.html
+++ b/html/error404.html
@@ -11,27 +11,31 @@
 </head>
 
 <body>    
-    <header>
-        <div class="left">
-            <img id="plant_Logo" src="../images/website_Icon/plant.png" alt="Logo Small">
-            <h1 class="gradient_Text">HeMa (Herbal Web Manager)</h1>
+    <div class="nav">
+        <input type="checkbox" id="nav-check">
+        <div class="nav-header">
+          <div class="nav-title">
+            <div class="left">
+                <img id="plant_Logo" src="../images/website_Icon/plant.png" alt="Logo Small">
+                <h3 class="gradient_Text">HeMa (Herbal Web Manager)</h3>
+            </div>
+          </div>
+        </div>
+        <div class="nav-btn">
+          <label for="nav-check">
+            <span></span>
+            <span></span>
+            <span></span>
+          </label>
         </div>
         
-        <form action="" class="search_Bar">
-            <input type="text" placeholder="search plant" name="q" autocomplete="off">
-            <button type="submit"><img src="../images/website_Icon/search.png" alt=""></button>
-        </form>
-
-        <div class="right">
-            <nav>
-                <ul>
-                    <li class="gradient_Text"><a href="index.html">Home</a></li>
-                    <li class="gradient_Text"><a href="about.html">About</a></li>
-                    <li class="gradient_Text"><a href="contact.html">Contact</a></li>
-                </ul>
-            </nav>
+        <div class="nav-links">
+          <a href="index.html" >Home</a>
+          <a href="about.html" >About</a>
+          <a href="contact.html" >Contact</a>
+          <a href="landingPage.html">Logout</a>
         </div>
-    </header>
+      </div>
     <main>
 
         <div class="rectangle">
