--- a/html/howToPress.html
+++ b/html/howToPress.html
@@ -52,7 +52,7 @@
               <h2>Memento You’ll Want to Display</h2>
               <p>Pressed flowers are a simple way to preserve a moment in time. By pressing flowers, you can save a thoughtful bouquet from a loved one or commemorate flowers from a special event. Plus, it’s an easy way to keep the beauty of spring and summer blooms alive (almost) forever.</p>
               <div class="image">
-                <img id="bestImage" src="../images/howToPress/1.webp" width="200px" alt="">
+                <img id="bestImage" src="../images/howToPress/1.webp" width="200" alt="">
               </div>
             </div>
 
@@ -72,9 +72,9 @@
               <p class="item"><u>*You can buy or make a wooden flower press.</u></p>
               
               <div class="image">
-                <img src="../images/howToPress/2.webp" width="200px" alt="">
-                <img src="../images/howToPress/3.webp" width="200px" alt="">
-                <img src="../images/howToPress/4.webp" width="200px" alt="">
+                <img src="../images/howToPress/2.webp" width="200" alt="">
+                <img src="../images/howToPress/3.webp" width="200" alt="">
+                <img src="../images/howToPress/4.webp" width="200" alt="">
               </div>
             </div>
 
@@ -82,8 +82,8 @@
               <h2>3.1. How to Press Flowers in a Book</h2>
               <p>The easiest way to press flowers doesn’t involve any special equipment other than absorbent paper and a heavy book or phone book. Pigments in the petals, stems, and leaves may stain the paper, so if the book is valuable, protect the pages with an extra layer of paper on each side of the plants being pressed.</p>
               <div class="image">
-                <img src="../images/howToPress/5.webp" width="200px" alt="">
-                <img src="../images/howToPress/6.webp" width="200px" alt="">
+                <img src="../images/howToPress/5.webp" width="200" alt="">
+                <img src="../images/howToPress/6.webp" width="200" alt="">
               </div>
             </div>
 
@@ -91,8 +91,8 @@
               <h2>3.2. How to Press Flowers With an Iron</h2>
               <p>Like the book method, start by pressing the flowers between two pieces of absorbent paper. Heat iron to a low setting. Empty any water from the iron and don’t add water (you don’t want to add more moisture with the steam).</p>
               <div class="image">
-                <img src="../images/howToPress/7.webp" width="200px" alt="">
-                <img src="../images/howToPress/8.webp" width="200px" alt="">
+                <img src="../images/howToPress/7.webp" width="200" alt="">
+                <img src="../images/howToPress/8.webp" width="200" alt="">
               </div>
             </div>
             
