--- a/html/landingPage.html
+++ b/html/landingPage.html
@@ -27,16 +27,16 @@
                 🡨
               </button>
               <ul class="image-list">
-                <img class="image-item" src="../images/background/picture1.png" alt="img-1" />
-                <img class="image-item" src="../images/background/picture10.png" alt="img-2" />
-                <img class="image-item" src="../images/background/picture9.png" alt="img-3" />
-                <img class="image-item" src="../images/background/picture2.png" alt="img-4" />
-                <img class="image-item" src="../images/background/picture5.png" alt="img-5" />
-                <img class="image-item" src="../images/background/picture8.png" alt="img-6" />
-                <img class="image-item" src="../images/background/picture7.png" alt="img-7" />
-                <img class="image-item" src="../images/background/picture3.png" alt="img-8" />
-                <img class="image-item" src="../images/background/picture6.png" alt="img-9" />
-                <img class="image-item" src="../images/background/picture4.png" alt="img-10" />
+                <li><img class="image-item" src="../images/background/picture1.png" alt="img-1"></li>
+                <li><img class="image-item" src="../images/background/picture10.png" alt="img-2"></li>
+                <li><img class="image-item" src="../images/background/picture9.png" alt="img-3"></li>
+                <li><img class="image-item" src="../images/background/picture2.png" alt="img-4"></li>
+                <li><img class="image-item" src="../images/background/picture5.png" alt="img-5"></li>
+                <li><img class="image-item" src="../images/background/picture8.png" alt="img-6"></li>
+                <li><img class="image-item" src="../images/background/picture7.png" alt="img-7"></li>
+                <li><img class="image-item" src="../images/background/picture3.png" alt="img-8"></li>
+                <li><img class="image-item" src="../images/background/picture6.png" alt="img-9"></li>
+                <li><img class="image-item" src="../images/background/picture4.png" alt="img-10"></li>
               </ul>
               <button id="next-slide" class="slide-button material-symbols-rounded">
                 🡪
