--- a/html/urbanGardening.html
+++ b/html/urbanGardening.html
@@ -52,7 +52,7 @@
                 <h2>Gardening in Small Spaces</h2>
                 <p>Urban gardening offers solutions for individuals living in apartments, condos, or homes with limited outdoor space. Here are some tips for gardening in small spaces:</p>
               <div class="image">
-                <img id="bestImage" src="../images/urbanGardening/1.jpg" width="200px" alt="">
+                <img id="bestImage" src="../images/urbanGardening/1.jpg" width="200" alt="">
               </div>
             </div>
 
@@ -61,8 +61,8 @@
               <p>Use containers such as pots, planters, and hanging baskets to grow plants on balconies, patios, or windowsills.</p>
 
               <div class="image">
-                <img src="../images/urbanGardening/2.jpg" width="200px" alt="">
-                <img src="../images/urbanGardening/3.webp" width="200px" alt="">
+                <img src="../images/urbanGardening/2.jpg" width="200" alt="">
+                <img src="../images/urbanGardening/3.webp" width="200" alt="">
               </div>
 
             </div>
@@ -73,8 +73,8 @@
               <p>Before you get started, make sure you have the right supplies for the job! You’ll find most of these items around your house already:</p>
               
               <div class="image">
-                <img src="../images/urbanGardening/4.jpg" width="200px" alt="">
-                <img src="../images/urbanGardening/5.jpg" width="200px" alt="">
+                <img src="../images/urbanGardening/4.jpg" width="200" alt="">
+                <img src="../images/urbanGardening/5.jpg" width="200" alt="">
               </div>
             </div>
 
@@ -82,8 +82,8 @@
               <h2> Community Gardens</h2>
               <p>Join or start a community garden in your neighborhood where you can share gardening space, resources, and knowledge with other urban gardeners.</p>
               <div class="image">
-                <img src="../images/urbanGardening/6.jpg" width="200px" alt="">
-                <img src="../images/urbanGardening/7.jpg" width="200px" alt="">
+                <img src="../images/urbanGardening/6.jpg" width="200" alt="">
+                <img src="../images/urbanGardening/7.jpg" width="200" alt="">
               </div>
             </div>
 
@@ -92,8 +92,8 @@
               <h2>Microgreens and Sprouts</h2>
               <p>Grow nutritious microgreens and sprouts indoors on kitchen counters or shelves using trays, containers, or specialized growing kits.</p>
               <div class="image">
-                <img src="../images/urbanGardening/8.jpg" width="200px" alt="">
-                <img src="../images/urbanGardening/9.webp" width="200px" alt="">
+                <img src="../images/urbanGardening/8.jpg" width="200" alt="">
+                <img src="../images/urbanGardening/9.webp" width="200" alt="">
               </div>
             </div>
 
