--- a/html/generateReports.html
+++ b/html/generateReports.html
@@ -48,6 +48,7 @@
                     </div>
                 </div>
         
+            </div>
         </div>
 
         <div class="f-wrapper f-wrapper--1">
