--- a/html/listOfClients.html
+++ b/html/listOfClients.html
@@ -25,28 +25,28 @@
 
             <section>
 
-                <input id="textInput" placeholder="Search by email"></input>
+                <input id="textInput" placeholder="Search by email">
 
                 <table id="clientsTable">
                     <thead>
                         <tr>
-                            <th><h2 class="idcol">Id</h2></th>
-                            <th><h2>Name</h2></th>
-                            <th><h2>Email</h2></th>
+                            <th><span class="idcol">Id</span></th>
+                            <th><span>Name</span></th>
+                            <th><span>Email</span></th>
                         </tr>
                     </thead>
                     <tbody id="clientsTableBody">
                         <tr id="hidden">
-                            <th><h2 class="idcol">-</h2></th>
-                            <th class="scrollable-content"><h2>There is noone here</h2></th>
-                            <th><h2>With this given email address</h2></th>
+                            <th><span class="idcol">-</span></th>
+                            <th class="scrollable-content"><span>There is noone here</span></th>
+                            <th><span>With this given email address</span></th>
                         </tr>
                         <tr>
-                            <th><h2 class="idcol">1</h2></th>
-                            <th class="scrollable-content"><h2>Rosca Alexandru-David</h2></th>
-                            <th><h2>alexandrurosca434@gmail.com</h2></th>
-                            <th class="deleteBtn"><h2 class="emoji">🗑️</h2></th>
-                            <th><h2 class="emoji">🌱</h2></th>
+                            <th><span class="idcol">1</span></th>
+                            <th class="scrollable-content"><span>Rosca Alexandru-David</span></th>
+                            <th><span>alexandrurosca434@gmail.com</span></th>
+                            <th class="deleteBtn"><span class="emoji">🗑️</span></th>
+                            <th><span class="emoji">🌱</span></th>
                         </tr>
                     </tbody>
                     
