--- a/Documentatie/Documentatie.html
+++ b/Documentatie/Documentatie.html
@@ -22,31 +22,31 @@
 
 <h4>Login Page</h4>
 <p>The Login page is the gateway for users to access their personal HeMa accounts. The user-friendly design requires only essential information like username or email and password.</p>
-<img src="/images/login.png" alt="Login">
+<img src="./images/login.png" alt="Login">
 
 <h4>Signup Page</h4>
 <p>The Signup page stands as an invitation to join the HeMa community. Future users can create a unique account using their email and a chosen username. The design ensures a quick but secure registration process, preventing the creation of multiple accounts with the same email or username.</p>
-<img src="/images/register.png" alt="Register">
+<img src="./images/register.png" alt="Register">
 
 <h4>Main Page</h4>
 <p>Once logged in, users are welcomed to the main page which serves as the central hub for all HeMa functionalities. Here, users can access different plant collections, manage their profiles, and get helpful plant care tips, all through an inviting interface embellished with thematic plant imagery.</p>
-<img src="/images/about.png" alt="Main">
+<img src="./images/about.png" alt="Main">
 
 <h4>My Profile</h4>
 <p>Users can customize their experience on the My Account page by changing usernames, passwords, and reviewing their plant collection and shopping history.</p>
-<img src="/images/profile.png" alt="Profile">
+<img src="./images/profile.png" alt="Profile">
 
 <h4>My Garden</h4>
 <p>The My Garden page allows users to manage their personal plant collections which were taken from a large database of existing species.</p>
-<img src="/images/profileWithCollections.png" alt="Collections">
+<img src="./images/profileWithCollections.png" alt="Collections">
 
 <h4>Blog Page</h4>
 <p>The Blog page is where users can create and share their articles or experiences about plant care, botanical research, and more. It serves as a platform for community engagement and knowledge sharing. This page allows users to post new content, edit existing posts, and interact with other community members through comments.</p>
-<img src="/images/createNewBlog.png" alt="Blog Page">
+<img src="./images/createNewBlog.png" alt="Blog Page">
 
 <h4>Collection Page</h4>
 <p>The Collection Page allows users to view, manage, and organize their personal plant collections. This page provides detailed views of each plant, including care tips, scientific classifications, and the ability to add or remove plants from their collection. It is designed to be highly interactive and user-friendly, facilitating easy management of plant data.</p>
-<img src="/images/plantCollection.png" alt="Collection Page">
+<img src="./images/plantCollection.png" alt="Collection Page">
 
 
 <h3>Software Interfaces</h3>
@@ -74,6 +74,9 @@
 
 <h3>Creating and Reading Blogs</h3>
 <p>The HeMa platform offers each user the opportunity to create their own blogs, allowing them to share experiences, tips, or stories related to plants. Users can also read and interact with blogs posted by other community members, fostering the exchange of knowledge and experiences among plant enthusiasts.</p>
+
+<h3>Feed</h3>
+<p>HeMa allows users of the platform to interacted with other users collections that they shared on the website, this can be done using the form page where they can search using multiatributes specific collections and they can see it in 2 different modes, a text based one and a more visually appearing one</p>
 
 <h3>Interaction with the Community</h3>
 <p>HeMa encourages interaction among users through integrated social features such as the ability to follow interesting collections of other users or to receive notifications when a collection is updated. Thus, the platform becomes not just a space for managing plants, but also a vibrant community for botanical enthusiasts.</p>
