--- a/html/admin.html
+++ b/html/admin.html
@@ -39,6 +39,11 @@
                     <p>Logout and go back to the main screen</p>
                 </section>
 
+                <section id="documentation">
+                    <h2>Project Documentation</h2>
+                    <p>The project's scholarly documentation</p>
+                </section>
+
                 <section id="error">
                     <h2>Error404 Page</h2>
                     <p>Interact with the error404 webpage</p>
