--- a/html/error404.html
+++ b/html/error404.html
@@ -41,7 +41,7 @@
         <div class="rectangle">
             <p id="main404">Sorry, this page is unavailable.</p>
             <p id="sec404">The link you followed may be broken, or the page may have been removed.</p>
-            <a href="../html/index.html" id="linkToHome">Go back to HeMa.</a>
+            <a href="./index.html" id="linkToHome">Go back to HeMa.</a>
         </div>
 
     </main>
