--- a/html/login.html
+++ b/html/login.html
@@ -42,7 +42,7 @@
 
                 <div class = "line"></div>
 
-                <form id = "login_form" action="../html/index.html" method="post">
+                <form id = "login_form" action="./index.html" method="post">
 
                     <p class ="gradient_Text">Email</p><br>
                     <input type="text" name="Email" id="Email" placeholder="My Email Is" autocomplete="off" ><br>
