--- a/html/generateReports.html
+++ b/html/generateReports.html
@@ -14,7 +14,7 @@
 
 <body>    
     <header>
-        <p class="gradient_Text"><a href="../html/admin.html">Admin Dashboard</a></p>
+        <p class="gradient_Text"><a href="./admin.html">Admin Dashboard</a></p>
     </header>
     <main>
 
