--- a/html/register.html
+++ b/html/register.html
@@ -45,7 +45,7 @@
             <form id = "login_form" action="/login.html" method="post">
 
                 <p class ="gradient_Text">Email</p><br>
-                <input type="email" name="Email" id="Email" placeholder="My Email Is" autocomplete="off"><br>
+                <input type="text" name="Email" id="Email" placeholder="My Email Is" autocomplete="off"><br>
                 <p class ="gradient_Text">Name</p><br>
                 <input type="text" name="Name" id="Name" placeholder="My Name Is" autocomplete="off"><br>
                 <p class ="gradient_Text">Password</p><br>
