Added sessions(different for admins and clients) and error404 page returns the user to different pages depending on type

--- a/html/blog.html
+++ b/html/blog.html
@@ -35,7 +35,7 @@
           <a href="index.html" >Home</a>
           <a href="about.html" >About</a>
           <a href="contact.html" >Contact</a>
-          <a href="landingPage.html">Logout</a>
+          <a id="logout" href="landingPage.html">Logout</a>
         </div>
       </div>
     <main>
@@ -102,5 +102,6 @@
     <!-- Scripts -->
     <script src="../scripts/footer.js"></script>
     <script src="../scripts/blogs.js"></script>
+    <script src="../scripts/navBar.js"></script>
 </body>
 </html>
