--- a/html/PlantProfilePage.html
+++ b/html/PlantProfilePage.html
@@ -9,21 +9,31 @@
     <link rel="icon" href="../images/website_Icon/plant.png" type="image/x-icon">
 </head>
 <body>
-    <header>
-        <div class="left">
-            <img id="plant_Logo" src="../images/website_Icon/plant.png" alt="Logo Small">
-            <h1 class="gradient_Text">HeMa (Herbal Web Manager)</h1>
+    <div class="nav">
+        <input type="checkbox" id="nav-check">
+        <div class="nav-header">
+          <div class="nav-title">
+            <div class="left">
+                <img id="plant_Logo" src="../images/website_Icon/plant.png" alt="Logo Small">
+                <h3 class="gradient_Text">HeMa (Herbal Web Manager)</h3>
+            </div>
+          </div>
         </div>
-        <div class="right">
-            <nav>
-                <ul>
-                    <li class="gradient_Text"><a href="index.html">Home</a></li>
-                    <li class="gradient_Text"><a href="about.html">About</a></li>
-                    <li class="gradient_Text"><a href="contact.html">Contact</a></li>
-                </ul>
-            </nav>
+        <div class="nav-btn">
+          <label for="nav-check">
+            <span></span>
+            <span></span>
+            <span></span>
+          </label>
         </div>
-    </header>
+        
+        <div class="nav-links">
+          <a href="index.html" >Home</a>
+          <a href="about.html" >About</a>
+          <a href="contact.html" >Contact</a>
+          <a id="logout" href="landingPage.html">Logout</a>
+        </div>
+      </div>
 
     <main class="plant-profile-main image-background">
         <main>
@@ -109,5 +119,7 @@
         <img id = "uaic" class="socialMediaIcon" src="../images/social_media/uaic_logo_small.png" alt="Logo Small">
     </footer>
     <script src="../scripts/script.js"></script>
+    <script src="../scripts/footer.js"></script>
+    <script src="../scripts/navBar.js"></script>
 </body>
 </html>
