--- a/html/collection.html
+++ b/html/collection.html
@@ -36,7 +36,7 @@
           <a href="index.html" >Home</a>
           <a href="about.html" >About</a>
           <a href="contact.html" >Contact</a>
-          <a href="landingPage.html">Logout</a>
+          <a id="logout" href="landingPage.html">Logout</a>
         </div>
       </div>
     <main>
@@ -61,5 +61,6 @@
 
     <script src="../scripts/collection.js"></script>
     <script src="../scripts/footer.js"></script>
+    <script src="../scripts/navBar.js"></script>
 </body>
 </html>
