--- a/html/contact.html
+++ b/html/contact.html
@@ -34,7 +34,7 @@
       <a href="index.html" >Home</a>
       <a href="about.html" >About</a>
       <a href="contact.html" >Contact</a>
-      <a href="landingPage.html">Logout</a>
+      <a id="logout" href="landingPage.html">Logout</a>
     </div>
   </div>
     <main>
@@ -122,5 +122,6 @@
     <!-- Scripts -->
     <script src="../scripts/footer.js"></script>
     <script src="../scripts/contact.js"></script>
+    <script src="../scripts/navBar.js"></script>
 </body>
 </html>
