--- a/html/error404.html
+++ b/html/error404.html
@@ -33,7 +33,7 @@
           <a href="index.html" >Home</a>
           <a href="about.html" >About</a>
           <a href="contact.html" >Contact</a>
-          <a href="landingPage.html">Logout</a>
+          <a id="logout" href="landingPage.html">Logout</a>
         </div>
       </div>
     <main>
@@ -41,7 +41,7 @@
         <div class="rectangle">
             <p id="main404">Sorry, this page is unavailable.</p>
             <p id="sec404">The link you followed may be broken, or the page may have been removed.</p>
-            <a href="./index.html" id="linkToHome">Go back to HeMa.</a>
+            <a id="linkToHome">Go back to HeMa.</a>
         </div>
 
     </main>
@@ -53,5 +53,7 @@
 
     <!-- Scripts -->
     <script src="../scripts/footer.js"></script>
+    <script src="../scripts/navBar.js"></script>
+    <script src="../scripts/error404.js"></script>
 </body>
 </html>
