--- a/html/index.html
+++ b/html/index.html
@@ -32,7 +32,7 @@
               <a href="index.html" >Home</a>
               <a href="about.html" >About</a>
               <a href="contact.html" >Contact</a>
-              <a href="landingPage.html">Logout</a>
+              <a id="logout" href="landingPage.html">Logout</a>
             </div>
           </div>
 
@@ -93,5 +93,6 @@
         </footer>
 
         <script src="../scripts/footer.js"></script>
+        <script src="../scripts/navBar.js"></script>
     </body>
 </html>
