Added comments, added CRD for comments

--- a/html/blogPage.html
+++ b/html/blogPage.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>‎ </title>
     <link rel="stylesheet" href="../css/template.css">
     <link rel="stylesheet" href="../css/flower.css">
     <link rel="stylesheet" href="../css/blog.css">
-    <link rel="stylesheet" href="../css/howToPressFlowers.css">
+    <link rel="stylesheet" href="../css/blogPageFlower.css">
+    <link rel="stylesheet" href="../css/blogPage.css">
     <link rel="icon" href="../images/website_Icon/plant.png" type="image/x-icon">
 </head>
 
@@ -43,7 +44,13 @@
         <div class="container">
           
         </div>
-          
+
+        <div id="comments">
+          <div class="comment-box">
+            <textarea class="comment-input" placeholder="Write your comment here..."></textarea>
+            <button class="add-comment-btn">Add Comment</button>
+          </div>
+        </div> 
 
         <div class="f-wrapper f-wrapper--1">
             <div class="f">
