--- a/html/about.html
+++ b/html/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HeMa</title>
+    <title>About | HeMa</title>
     <link rel="stylesheet" href="../css/template.css">
     <link rel="stylesheet" href="../css/cards.css">
     <link rel="stylesheet" href="../css/aboutUsCards.css">
