--- a/html/contact.html
+++ b/html/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact us</title>
+    <title>Contact | HeMa</title>
     <link rel="stylesheet" href="../css/template.css">
     <link rel="stylesheet" href="../css/flower.css">
     <link rel="stylesheet" href="../css/contact.css">
