--- a/html/createNewBlog.html
+++ b/html/createNewBlog.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create New Blog</title>
+    <title>New Blog | HeMa</title>
     <link rel="stylesheet" href="../css/template.css">
     <link rel="stylesheet" href="../css/flower.css">
     <link rel="stylesheet" href="../css/blog.css">
