--- a/html/feed.html
+++ b/html/feed.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Feed</title>
+    <title>Feed | HeMa</title>
     <link rel="stylesheet" href="../css/template.css">
     <link rel="stylesheet" href="../css/cards.css"> 
     <link rel="stylesheet" href="../css/flower.css"> 
