--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>About | HeMa</title>
+        <title>Home | HeMa</title>
         <link rel="stylesheet" href="../css/template.css">
         <link rel="stylesheet" href="../css/about.css">
         <link rel="icon" href="../images/website_Icon/plant.png" type="image/x-icon">
