--- a/html/profile.html
+++ b/html/profile.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profile</title>
+    <title>Profile | HeMa</title>
     <link rel="stylesheet" href="../css/template.css">
     <link rel="stylesheet" href="../css/hover-cards.css">
     <!-- <link rel="stylesheet" href="../css/profile.css"> -->
