Added search functionality for blogs at 4 am in the morning

--- a/html/blog.html
+++ b/html/blog.html
@@ -46,6 +46,12 @@
                 <h1>Blogs</h1>
             </div>
 
+            <div id="searchBar">
+            <input class="textInput" id="nameInput" placeholder="Search by title">
+            <input class="textInput" id="clientInput" placeholder="Search by user">
+            <input class="textInput" id="dateInput" placeholder="Search by date(dd/mm/yyyy)">
+            </div>
+
             <div class="blog-post" id="1">
                 <h2>How to Press Plants</h2>
                 <p>Learn the timeless art of pressing plants to preserve their beauty for years to come. Discover simple techniques for preparing and pressing flowers, leaves, and other botanical specimens, turning them into stunning keepsakes, decorative elements, or unique artworks.</p>
